docroot/themes/custom/uids_base/scss/components/banner.scss
@import "assets/scss/_variables.scss";
@import "assets/scss/_utilities.scss";
@import "components/banner/banner.scss";

.banner.banner--gradient-left-reversed .bold-headline.bold-headline--negative {
  text-shadow: none;
  color: $secondary;
}


.layout--onecol,
.layout--twocol--75-25 .layout__region--first,
.layout--twocol--25-75 .layout__region--second,
.layout--twocol--67-33 .layout__region--first,
.layout--twocol--33-67 .layout__region--second,
.layout--twocol--50-50 {
  .banner {

    // Set layout text width for onecol containers only excluding the rule below
    &:not([class*="banner--horizontal-left"]) {
      .banner__text {
        @include breakpoint(sm) {
          width: 100%;
        }

        @include breakpoint(menu) {
          width: 80%;
        }

        @include breakpoint(container) {
          width: 60%;
        }
      }
    }
  }
}

// Layout specific sizing overrides
.layout--threecol,
.layout--fourcol,
.layout--twocol--25-75 .layout__region--first,
.layout--twocol--75-25 .layout__region--second,
.layout--twocol--33-67 .layout__region--first,
.layout--twocol--67-33 .layout__region--second {
  .banner {

    .bold-headline {
      @include breakpoint(menu) {
        font-size: 2.4rem;
      }

      &.bold-headline--highlight {
        @include breakpoint(menu) {
          font-size: 1.8rem;
        }
      }
    }

    .banner__content {
      @include breakpoint(sm) {
        padding: 2rem;
      }
    }

  }
}

.layout--onecol,
.layout--twocol--25-75 .layout__region--second,
.layout--twocol--75-25 .layout__region--first,
.layout--twocol--33-67 .layout__region--second,
.layout--twocol--67-33 .layout__region--first,
.layout--twocol--50-50 {
  .banner .banner__content {
    @include breakpoint(sm) {
      padding: 1.5rem;
    }
  }

  // Set banner content width if centered left is selected
  .banner--vertical-center.banner--horizontal-left {
    .banner__content {
      @include breakpoint(sm) {
        width: 100%;
      }

      @include breakpoint(menu) {
        width: 80%;
      }

      @include breakpoint(container) {
        width: 50%;
      }
    }
  }
}

// Adjust padding for left aligned bottom content
.layout--onecol {
  .banner {
    &.banner--vertical-bottom.banner--horizontal-left {
      .banner__content {
        @include breakpoint(sm) {
          padding: 3rem 1.5rem 4rem 1.5rem;
        }
      }
    }
  }

  // Remove left/right padding if edge-to-edge is selected
  .layout--onecol[class*=page__container--edge] {
    .banner__content {
      @include breakpoint(container) {
        padding: 3rem 0;
      }
    }
  }
}

// Set larger heading size for large banner only
.banner--large,
.layout--title.banner {
  .bold-headline {
    @include breakpoint(md) {
      font-size: calc(100% + 3.5vw);
    }
  }
}

.banner__image {
  .contextual-region {
    // Remove contextual position for logged in view of banner image
    position: unset;
  }
  .field--name-field-media-image img {
    // Override height:auto set in media--type-image.scss
    height: 100%;
  }
}

// Video override
.banner video {
  width: 100% !important;
}

.media--video .video-controls {
  z-index: 2;
  .banner--vertical-bottom.banner--horizontal-left & {
    @include breakpoint(sm) {
      left: 1.5rem;
      bottom: 1.5rem;
    }
  }
}

